# conan-2-wrapper-templates

./: LICENSE  README.md
build-executable-project/: CMakeConanProject.cmake  CMakeLists.txt  ConanExecPreset.cmake  README.md  conanfile.txt
build-executable-project/doc/: README.md  README_RUS.md
build-executable-project/main/src/: main.cpp
build-lib-project/: .gitignore  CMakeConanProject.cmake  CMakeLists.txt  ConanLibPreset.cmake  ConanProfileGen.cmake  README.md  conanfile.py  gen_conan_profile
build-lib-project/conan_lib/: CMakeLists.txt
build-lib-project/conan_lib/test/include/: SimpleTest.h  SlowTest.h
build-lib-project/doc/: README.md  README_RUS.md
build-lib-project/include/: Hello.h
build-lib-project/lib/: CMakeLists.txt
build-lib-project/lib/src/: Hello.cpp
build-lib-project/src/: Hello.cpp
build-lib-project/temp/: CMakeLists.txt  conanfile.py
build-lib-project/temp/include/: temp.h
build-lib-project/temp/src/: temp.cpp
build-lib-project/temp/test_package/: CMakeLists.txt  conanfile.py
build-lib-project/temp/test_package/src/: example.cpp
build-lib-project/test_lib/: CMakeLists.txt
build-lib-project/test_lib/src/: MainTest.cpp
conan-server/: README.md
conan-server/conan-server/: docker-compose.yml
conan-server/conan-server-build/: docker-compose.yml
conan-server/conan-server-build/conan-server-image/: Dockerfile  config_setter.py  server.conf  server_setup.conf
conan-server/conan-server-src/: docker-compose.yml
conan-server/conan-server-src/conan-server-image/: Dockerfile  config_setter.py  server_setup.conf
conan-server/doc/: README.md  README_RUS.md
doc/: README_RUS.md
presets/build-executable-project/: .gitignore  CMakeLists.txt
presets/build-executable-project/doc/: README_RUS.md
presets/build-executable-project/main/: CMakeLists.txt
presets/build-lib-project/: CMakeLists.txt
presets/build-lib-project/conan_lib/src/: Hello.cpp
presets/build-lib-project/conan_lib/test/: CMakeLists.txt
presets/build-lib-project/conan_lib/test/src/: main.cpp
presets/build-lib-project/doc/: README.md  README_RUS.md
tools/conan_exec/: ConanExecPreset.cmake
tools/conan_exec_preset/doc/: README_RUS.md
tools/conan_lib/: conanfile.py
tools/conan_lib_preset/: ConanLibPreset.cmake
tools/conan_lib_preset/doc/: README_RUS.md
tools/conan_profile_gen_with_micro_arch/: ConanProfileGen.cmake  settings_user.yml
tools/conan_profile_gen_with_micro_arch/doc/: README_RUS.md
tools/resources/: CMakeResources.cmake
tools/resources/doc/: README_RUS.md
tools/set_micro_arch/: ConanProfileGen.cmake  settings_user.yml
